Chronological listing of changes. If a particular SVN revision has no entry, that
check-in did not involve any code or feature changes.

2008-05-08 (r24)

* Now building quad-fat; the 64-bit versions are somewhat experimental though

2008-02-28 (r22)

* Using new functions to deal with protocols (Evan Doll)


2007-11-22 (r20)

* Added support for void* parameters (Tuukka Norri)
* Fixed a bug that could caused crashes when non-char const pointers were described
 

2007-11-22 (r19)

* Fixed bug to allow mocking of methods with type qualifieres (Nikita Zhuk)


2007-10-22 (r18)

* Added a simple constraint implementation.


2007-06-04 (r15)

* Now re-throwing fail-fast exceptions, for unexpected invocations for example, when
  verify is called; in case the first throw is ignored by a framework.


2007-04-23 (r14)

* Added nice mocks, i.e. mocks that don't raise on unknown methods (Mark Thomas)

* Fixed bug that prevented expectations after invocations (M. Scott Ford)


2006-06-11 (r12)

* Added possibility to throw an exception, based on code by Justin DeWind

* Added Evan Doll's bugfix, which forwards conformsToProtocol: methods when necessary

* Added the ability to match struct arguments, based on code contributed by Daniel Eggert

* Better description of arguments, based on code contributed by Jeremy Higgs

* Added the ability to create multiple identical expectations on the mock object (Jeremy Higgs)

* Added the ability to mock out nil arguments (Jeremy Higgs)


2005-12-11 (r11)

* Added slightly modified version of Jon Reid's contribution, which adds the possibility to stub 
  primitive return values.

* Added Jon Reid's bugfix that prevents a crash when trying to stub an unknown method on a 
  protocol.


2005-10-03 (r10)

* Upgraded to build and run tests using the OCUnit that is now part of XCode.


2005-10-03 (r9)

* Added XCdoe 2.1 project


2005-02-16 (r8)

* Added Richard Clark's contribution, which provides support for scalar arguments.


2005-02-13 (r7)