@@ -1,9 +1,15 @@
 Chronological listing of changes. If a particular SVN revision has no entry, that
 check-in did not involve any code or feature changes.
 
+2008-06-19 (r27)
+
+* Added optional integration with hamcrest for constraints
+
+
 2008-05-08 (r24)
 
 * Now building quad-fat; the 64-bit versions are somewhat experimental though
+
 
 2008-02-28 (r22)
 
